--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
     <groupId>com.jsonyao</groupId>
     <artifactId>netty-test</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>netty-part-one</module>
+    </modules>
     <packaging>pom</packaging>
 
     <parent>
