--- a/netty-part-one/pom.xml
+++ b/netty-part-one/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>jboss-marshalling-serial</artifactId>
             <version>1.3.0.CR9</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.7.1</version>
+        </dependency>
     </dependencies>
 </project>
