--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>netty-part-one</module>
+        <module>netty-part-two</module>
     </modules>
     <packaging>pom</packaging>
 
