netty-part-one> Netty整合SpringBoot初始化

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <modules>
         <module>netty-part-one</module>
         <module>netty-part-two</module>
+        <module>netty-common</module>
+        <module>netty-client</module>
+        <module>netty-server</module>
     </modules>
     <packaging>pom</packaging>
 
