--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>netty-common</module>
         <module>netty-client</module>
         <module>netty-server</module>
+        <module>io-test</module>
     </modules>
     <packaging>pom</packaging>
 
