--- a/io-test/pom.xml
+++ b/io-test/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>io-test</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.12.Final</version>
+        </dependency>
+    </dependencies>
 </project>
